More complete .gitignore for latex cruft.

--- a/.gitignore
+++ b/.gitignore
@@ -217,15 +217,28 @@ pip-log.txt
 
 GAJaloyan/conference/Papiers/*
 GAJaloyan/sample_report/Papiers/*
-*.aux
-TutorialAndDevGuide/Tutorial/tutorial.bbl
-*.blg
 TutorialAndDevGuide/Tutorial/tutorial.pdf
+
+*.aux
+*.glo
+*.idx
+*.log
 *.toc
-TutorialAndDevGuide/Tutorial/tutorial.synctex.gz
-*.toc
-TutorialAndDevGuide/Tutorial/tutorial.toc
-*.toc
-*.toc
-TutorialAndDevGuide/Tutorial/tutorial.toc
-*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
